--- a/dealership.html
+++ b/dealership.html
@@ -3,30 +3,270 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="dealership.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <title>yum yummeres</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav>
-        <div class="logo">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#grey" class="bi bi-egg" viewBox="0 0 16 16">
-                <path d="M8 15a5 5 0 0 1-5-5c0-1.956.69-4.286 1.742-6.12.524-.913 1.112-1.658 1.704-2.164C7.044 1.206 7.572 1 8 1c.428 0 .956.206 1.554.716.592.506 1.18 1.251 1.704 2.164C12.31 5.714 13 8.044 13 10a5 5 0 0 1-5 5zm0 1a6 6 0 0 0 6-6c0-4.314-3-10-6-10S2 5.686 2 10a6 6 0 0 0 6 6z"/>
-              </svg>
-            <h1>poo-poo.com</h1>
-        </div>
-        <div class="nav-link">
-            <ul>
-                <li><a href="index.html" class="action">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="dealership.html">Dealership</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-            </ul>
-        </div>
-        <div class="login">
-            <a href="login.html">Login</a>
-        </div>
-    </nav>
-    <!-- End Navbar -->
+   <!-- Navbar -->
+   <nav>
+    <div class="logo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#grey" class="bi bi-egg" viewBox="0 0 16 16">
+            <path d="M8 15a5 5 0 0 1-5-5c0-1.956.69-4.286 1.742-6.12.524-.913 1.112-1.658 1.704-2.164C7.044 1.206 7.572 1 8 1c.428 0 .956.206 1.554.716.592.506 1.18 1.251 1.704 2.164C12.31 5.714 13 8.044 13 10a5 5 0 0 1-5 5zm0 1a6 6 0 0 0 6-6c0-4.314-3-10-6-10S2 5.686 2 10a6 6 0 0 0 6 6z"/>
+          </svg>
+        <h1>Poo-Poo.com</h1>
+    </div>
+    <div class="nav-link">
+        <ul>
+            <li><a href="index.html" class="action">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="dealership.html">Dealership</a></li>
+            <li><a href="gallery.html">gallery</a></li>
+            <li><a href="location.html">Location</a></li>
+        </ul>
+    </div>
+    <form class="d-flex" role="search">
+        <i class="bi bi-search"></i>
+        <input class="form-control me-2 bi" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+</nav>
+<!-- End Navbar -->
+<!-- container baru -->
+<div class="main_blog anim">
+
+    <div class="slide_1">
+
+        <div class="blog_box">
+
+            <div class="blog_card">
+
+                <div class="blog_image">
+                    <img src="toyota-new-gr-supra_169.jpeg">
+                </div>
+
+                <div class="blog_tag">
+
+                    <div class="blog_date">
+                        <p>18 May 2022<i class="fa-solid fa-calendar-days"></i></p>
+                    </div>
+
+                    <h3 class="blog_heading">
+                        NEW Toyota GR Supra free
+                    </h3>
+
+                    <p class="blog_text">
+                        Coupe terbaru dari Toyota, GR Supra, hadir dengan 1 varian. Varian tertinggi hadir dengan mesin Petrol 2998 cc, yang mampu menghasilkan tenaga hingga 382 hp 
+                    </p>
+
+                    <hr>
+
+                    <div class="view_and_like">
+
+                        <div class="view">
+                            <p>5jt views</p>
+                            <p class="b_com">70k comments</p>
+                        </div>
+
+                        <div class="like">
+                            <p>3K</p>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                        <div class="d-grid gap-2 d-md-block">
+                            <a href="https://www.oto.com/mobil-baru/toyota/supra/berita" class="btn btn-primary" type="button" sc="">button</a>
+                          </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="blog_card">
+
+                <div class="blog_image">
+                    <img src="WhatsApp Image 2023-10-23 at 16.13.43_bc4a3327.jpg">
+                </div>
+
+                <div class="blog_tag">
+
+                    <div class="blog_date">
+                        <p>18 May 2022<i class="fa-solid fa-calendar-days"></i></p>
+                    </div>
+
+                    <h3 class="blog_heading">
+                        How to buy some cars in our shop
+                    </h3>
+
+                    <p class="blog_text">
+                        Don't forget to buy something in our shop
+                    </p>
+
+                    <hr>
+
+                    <div class="view_and_like">
+
+                        <div class="view">
+                            <p>15k views</p>
+                            <p class="b_com">1k comments</p>
+                        </div>
+
+                        <div class="like">
+                            <p>3K</p>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                        <div class="d-grid gap-2 d-md-block">
+                            <a href="https://www.oto.com/mobil-baru/lamborghini/dealer" class="btn btn-primary" type="button" sc="">button</a>
+                          </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="blog_card">
+
+                <div class="blog_image">
+                    <img src="utopia-liricojpg-20220913060856.jpg">
+                </div>
+
+                <div class="blog_tag">
+
+                    <div class="blog_date">
+                        <p>18 May 2022<i class="fa-solid fa-calendar-days"></i></p>
+                    </div>
+
+                    <h3 class="blog_heading">
+                        New Pagani Utopia Car Launched, Successor to Huayra with 852 DK Power
+                    </h3>
+
+                    <p class="blog_text">
+                        The Pagani Utopia was introduced as the third car from the supercar manufacturer led by Horacio Pagani, which is now three decades old.
+                    </p>
+
+                    <hr>
+
+                    <div class="view_and_like">
+
+                        <div class="view">
+                            <p>100m views</p>
+                            <p class="b_com">100 comments</p>
+                        </div>
+
+                        <div class="like">
+                            <p>3K</p>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                        <div class="d-grid gap-2 d-md-block">
+                            <a href="https://www.gridoto.com/read/223475663/mobil-baru-pagani-utopia-meluncur-penerus-huayra-bertenaga-852-dk" class="btn btn-primary" type="button" sc="">button</a>
+                          </div>
+                            
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="blog_card">
+
+                <div class="blog_image">
+                    <img src="lamborghini-aventador-front-angle-low-view-871719.webp">
+                </div>
+
+                <div class="blog_tag">
+
+                    <div class="blog_date">
+                        <p>31 oktober 2023<i class="fa-solid fa-calendar-days"></i></p>
+                    </div>
+
+                    <h3 class="blog_heading">
+                        Lamborghini Aventador
+                    </h3>
+
+                    <p class="blog_text">
+                        look the new cars fro lamborghini
+                    </p>
+
+                    <hr>
+
+                    <div class="view_and_like">
+
+                        <div class="view">
+                            <p>15.3K views</p>
+                            <p class="b_com">786 comments</p>
+                        </div>
+
+                        <div class="like">
+                            <p>3K</p>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                        <div class="d-grid gap-2 d-md-block">
+                            <a href="https://www.oto.com/mobil-baru/lamborghini/aventador#:~:text=Harga%20Lamborghini%20Aventador%20di%20Indonesia,dari%20Rp%206%2C4%20Milyar." class="btn btn-primary" type="button" sc="">button</a>
+                          </div>
+                        </div>
+                    </div>
+                    
+</div>
+<footer>
+    <div class="footer">
+       <div class="cover">
+           <div class="quick-link">
+               <ul>
+                   <li>
+                       <h2>Quick Link</h2>
+                   </li>
+                   <li><a href="">Our Pricing</a></li>
+                   <li><a href="">About Us</a></li>
+                   <li><a href="">Services</a></li>
+                   <li><a href="">News</a></li>
+               </ul>
+           </div>
+           <div class="fasilitas">
+               <ul>
+                   <li>
+                       <h2>Our Facilities</h2>
+                   </li>
+                   <li><a href="">Car</a></li>
+                   <li><a href="">Car</a></li>
+                   <li><a href="">Car</a></li>
+               </ul>
+           </div>
+           <div class="more">
+               <ul>
+                   <li>
+                       <h2>More Services</h2>
+                   </li>
+                   <li><a href="">car</a></li>
+                   <li><a href="">car</a></li>
+                   <li><a href="">car</a></li>
+                   <li><a href="">car</a></li>
+               </ul>
+           </div>
+           <div class="footer-contact">
+               <ul>
+                   <li>
+                       <h2>Contact Us</h2>
+                   </li>
+                   <li>
+                       <p>225,Galle Road,
+                           Kalutara South,
+                           Sri Lanka
+                       </p>
+                   </li>
+                   <li>
+                       <p>Tel: +94 34 2 222 888
+                       </p>
+                   </li>
+                   <li>
+                       <p>Email:
+                           contact@phliphospitals.com
+                       </p>
+                   </li>
+               </ul>
+           </div>
+       </div>
+   </div>
+</footer>   
 </body>
 </html>
