--- a/dealership.html
+++ b/dealership.html
@@ -30,184 +30,67 @@
     <form class="d-flex" role="search">
         <i class="bi bi-search"></i>
         <input class="form-control me-2 bi" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button type="button" class="btn btn-outline-primary">Submit</button>
       </form>
 </nav>
 <!-- End Navbar -->
-<!-- container baru -->
-<div class="main_blog anim">
-
-    <div class="slide_1">
-
-        <div class="blog_box">
-
-            <div class="blog_card">
-
-                <div class="blog_image">
-                    <img src="toyota-new-gr-supra_169.jpeg">
-                </div>
-
-                <div class="blog_tag">
-
-                    <div class="blog_date">
-                        <p>18 May 2022<i class="fa-solid fa-calendar-days"></i></p>
-                    </div>
-
-                    <h3 class="blog_heading">
-                        NEW Toyota GR Supra free
-                    </h3>
-
-                    <p class="blog_text">
-                        Coupe terbaru dari Toyota, GR Supra, hadir dengan 1 varian. Varian tertinggi hadir dengan mesin Petrol 2998 cc, yang mampu menghasilkan tenaga hingga 382 hp 
-                    </p>
-
-                    <hr>
-
-                    <div class="view_and_like">
-
-                        <div class="view">
-                            <p>5jt views</p>
-                            <p class="b_com">70k comments</p>
-                        </div>
-
-                        <div class="like">
-                            <p>3K</p>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <div class="d-grid gap-2 d-md-block">
-                            <a href="https://www.oto.com/mobil-baru/toyota/supra/berita" class="btn btn-primary" type="button" sc="">button</a>
-                          </div>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="blog_card">
-
-                <div class="blog_image">
-                    <img src="WhatsApp Image 2023-10-23 at 16.13.43_bc4a3327.jpg">
-                </div>
-
-                <div class="blog_tag">
-
-                    <div class="blog_date">
-                        <p>18 May 2022<i class="fa-solid fa-calendar-days"></i></p>
-                    </div>
-
-                    <h3 class="blog_heading">
-                        How to buy some cars in our shop
-                    </h3>
-
-                    <p class="blog_text">
-                        Don't forget to buy something in our shop
-                    </p>
-
-                    <hr>
-
-                    <div class="view_and_like">
-
-                        <div class="view">
-                            <p>15k views</p>
-                            <p class="b_com">1k comments</p>
-                        </div>
-
-                        <div class="like">
-                            <p>3K</p>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <div class="d-grid gap-2 d-md-block">
-                            <a href="https://www.oto.com/mobil-baru/lamborghini/dealer" class="btn btn-primary" type="button" sc="">button</a>
-                          </div>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="blog_card">
-
-                <div class="blog_image">
-                    <img src="utopia-liricojpg-20220913060856.jpg">
-                </div>
-
-                <div class="blog_tag">
-
-                    <div class="blog_date">
-                        <p>18 May 2022<i class="fa-solid fa-calendar-days"></i></p>
-                    </div>
-
-                    <h3 class="blog_heading">
-                        New Pagani Utopia Car Launched, Successor to Huayra with 852 DK Power
-                    </h3>
-
-                    <p class="blog_text">
-                        The Pagani Utopia was introduced as the third car from the supercar manufacturer led by Horacio Pagani, which is now three decades old.
-                    </p>
-
-                    <hr>
-
-                    <div class="view_and_like">
-
-                        <div class="view">
-                            <p>100m views</p>
-                            <p class="b_com">100 comments</p>
-                        </div>
-
-                        <div class="like">
-                            <p>3K</p>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <div class="d-grid gap-2 d-md-block">
-                            <a href="https://www.gridoto.com/read/223475663/mobil-baru-pagani-utopia-meluncur-penerus-huayra-bertenaga-852-dk" class="btn btn-primary" type="button" sc="">button</a>
-                          </div>
-                            
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="blog_card">
-
-                <div class="blog_image">
-                    <img src="lamborghini-aventador-front-angle-low-view-871719.webp">
-                </div>
-
-                <div class="blog_tag">
-
-                    <div class="blog_date">
-                        <p>31 oktober 2023<i class="fa-solid fa-calendar-days"></i></p>
-                    </div>
-
-                    <h3 class="blog_heading">
-                        Lamborghini Aventador
-                    </h3>
-
-                    <p class="blog_text">
-                        look the new cars fro lamborghini
-                    </p>
-
-                    <hr>
-
-                    <div class="view_and_like">
-
-                        <div class="view">
-                            <p>15.3K views</p>
-                            <p class="b_com">786 comments</p>
-                        </div>
-
-                        <div class="like">
-                            <p>3K</p>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <div class="d-grid gap-2 d-md-block">
-                            <a href="https://www.oto.com/mobil-baru/lamborghini/aventador#:~:text=Harga%20Lamborghini%20Aventador%20di%20Indonesia,dari%20Rp%206%2C4%20Milyar." class="btn btn-primary" type="button" sc="">button</a>
-                          </div>
-                        </div>
-                    </div>
-                    
+<!--  -->
+<div class="atas">
+    <div class="right">
+        <p class="p1">This is our Dealership</p>
+        <p class="p2">Choose your car <br> wisely!</p>
+    </div>
 </div>
+<!--  -->
+
+<!-- container baru -->
+<div class="dealership">
+    <h1 style="text-align: center;">Our dealership</h1>
+    <div class="card1">
+        <div class="card2">
+            <img  class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMbw0kR625Hop0AJs5-gzlUwQbOM-phkSd3T0VnPlK&s">
+            <h4>
+                Lamborghini Aventador
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id!</p>
+            <div class="card-container">
+                <a class="button" href="https://www.oto.com/mobil-baru/lamborghini/aventador#:~:text=Harga%20Lamborghini%20Aventador%20di%20Indonesia,dari%20Rp%206%2C4%20Milyar.">view</a>
+            </div>
+        </div>
+        <div class="card2">
+            <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtAelqe-eZSDMcN7pkRspOBX9yACBj5G0LpeOkJdtL&s" alt="Card image cap">
+            <h4>
+                Pagani Utopia
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id!</p>
+            <div class="card-container">
+                <a class="button" href="https://www.gridoto.com/read/223475663/mobil-baru-pagani-utopia-meluncur-penerus-huayra-bertenaga-852-dk">view</a>
+            </div>
+        </div>
+        <div class="card2">
+            <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS57z740K4QrQhAvmy_s5iTY-oW9DIWThawM96hLTvc&s" alt="Card image cap">
+            <h4>
+                NEW Toyota GR Supra free 
+            </h4>
+            <p class="card-text">  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id! </p>
+            <div class="card-container">
+                <a class="button" href="https://www.oto.com/mobil-baru/toyota/supra/berita">view</a>
+            </div>
+        </div>
+        <div class="card2">
+            <img class="card-img-top" src="https://storage.googleapis.com/prod-nissan-indonesia/static-assets/brand/18tdigb-helios307c.jpg.ximg.l_6_m.smart.jpg" alt="Card image cap">
+            <h4>
+                Nissan GTR
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id!</p>
+            <div class="card-container">
+                <a class="button" href="">view</a>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
+
 <footer>
     <div class="footer">
        <div class="cover">
