--- a/location.html
+++ b/location.html
@@ -30,14 +30,13 @@
     <form class="d-flex" role="search">
         <i class="bi bi-search"></i>
         <input class="form-control me-2 bi" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button type="button" class="btn btn-outline-primary">Submit</button>
       </form>
 </nav>
 <!-- End Navbar -->
 
 <!-- location -->
 <div class="location">
-    
     <h1 style="text-align: center;">Our Location</h1>
     <div class="card1">
         <div class="card2">
