--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
         <form class="d-flex" role="search">
             <i class="bi bi-search"></i>
             <input class="form-control me-2 bi" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button type="button" class="btn btn-outline-primary">Submit</button>
           </form>
     </nav>
     <!-- End Navbar -->
