--- a/dealership.html
+++ b/dealership.html
@@ -70,7 +70,7 @@
         <div class="card2">
             <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS57z740K4QrQhAvmy_s5iTY-oW9DIWThawM96hLTvc&s" alt="Card image cap">
             <h4>
-                NEW Toyota GR Supra free 
+            Toyota GR Supra free 
             </h4>
             <p class="card-text">  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id! </p>
             <div class="card-container">
