--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,5 @@
 
-<frameset cols="110,*">
+<!-- <frameset cols="110,*">
     <frame name="leftframe" src="frame.html"/>
 
 <frameset cols="100">
@@ -8,4 +8,4 @@
 noframes>
     not supported
 </noframes>
-</frameset>
+</frameset> -->
