--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
     </div>
     <br>
+    <!-- container 3 -->
     <div class="comtainer3">
         <h1 style="text-align: center;">The Cars Type</h1>
         <div class="card1">
@@ -143,39 +144,17 @@
     <br>
     <h1 style="color: #4169E1;"><marquee scrollamount="20">get your free cars today</marquee></h1>
     <!-- end container 3 -->
-
-    <!-- container 4 -->
-    <!-- <div class="container4">
-        <div class="card1">
-        <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+    <!-- Container 4-->
+    <h1 style="text-align: center;">the car</h1>
+    <div class="container4">
+        <div class="top">
+            <h1 style="text-align: center;">the car</h1>
         </div>
     </div>
-    <br> -->
-    <!-- end container 4 -->
+    <br>
+    <br>
 
+    <!-- end container 4 -->
      <!-- Footer -->
     <footer>
      <div class="footer">
