--- a/about/about.html
+++ b/about/about.html
@@ -22,11 +22,11 @@
         </div>
         <div class="nav-link">
             <ul>
-                <li><a href="index.html" class="action">Home</a></li>
+                <li><a href="../index.html" class="action">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="dealership.html">Dealership</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-                <li><a href="location.html">Location</a></li>
+                <li><a href="/dealership/dealership.html">Dealership</a></li>
+                <li><a href="/gallery/gallery.html">gallery</a></li>
+                <li><a href="/location/location.html">Location</a></li>
             </ul>
         </div>
         <form class="d-flex" role="search">
