--- a/dealership/dealership.html
+++ b/dealership/dealership.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="location.css">
+    <link rel="stylesheet" href="dealership.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
@@ -20,11 +20,11 @@
     </div>
     <div class="nav-link">
         <ul>
-            <li><a href="index.html" class="action">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="dealership.html">Dealership</a></li>
-            <li><a href="gallery.html">gallery</a></li>
-            <li><a href="location.html">Location</a></li>
+            <li><a href="../index.html" class="action">Home</a></li>
+                <li><a href="/about/about.html">About</a></li>
+                <li><a href="dealership.html">Dealership</a></li>
+                <li><a href="/gallery/gallery.html">gallery</a></li>
+                <li><a href="/location/location.html">Location</a></li>
         </ul>
     </div>
     <form class="d-flex" role="search">
@@ -34,62 +34,64 @@
       </form>
 </nav>
 <!-- End Navbar -->
+<!--  -->
+<div class="atas">
+    <div class="right">
+        <p class="p1">This is our Dealership</p>
+        <p class="p2">Choose your car <br> wisely!</p>
+    </div>
+</div>
+<!--  -->
 
-<!-- location -->
-<div class="location">
-    <h1 style="text-align: center;">Our Location</h1>
+<!-- container baru -->
+<div class="dealership">
+    <h1 style="text-align: center;">Our dealership</h1>
     <div class="card1">
         <div class="card2">
+            <img  class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMbw0kR625Hop0AJs5-gzlUwQbOM-phkSd3T0VnPlK&s">
             <h4>
-                Our Location 1
+                Lamborghini Aventador
             </h4>
-            <iframe
-      src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=depok, jalan gotong royong Familly cell&amp;t=&amp;z=20&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-      class="w-100" height="250" allowfullscreen="" loading="lazy"></iframe>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id!</p>
             <div class="card-container">
-                <button>view</button>
+                <a class="button" href="https://www.oto.com/mobil-baru/lamborghini/aventador#:~:text=Harga%20Lamborghini%20Aventador%20di%20Indonesia,dari%20Rp%206%2C4%20Milyar.">view</a>
             </div>
         </div>
         <div class="card2">
+            <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtAelqe-eZSDMcN7pkRspOBX9yACBj5G0LpeOkJdtL&s" alt="Card image cap">
             <h4>
-                Our location 2
+                Pagani Utopia
             </h4>
-            <iframe
-      src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=sintang aries coffe&amp;t=&amp;z=20&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-      class="w-100" height="250" allowfullscreen="" loading="lazy"></iframe>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id!</p>
             <div class="card-container">
-                <button>view</button>
+                <a class="button" href="https://www.gridoto.com/read/223475663/mobil-baru-pagani-utopia-meluncur-penerus-huayra-bertenaga-852-dk">view</a>
             </div>
         </div>
         <div class="card2">
+            <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS57z740K4QrQhAvmy_s5iTY-oW9DIWThawM96hLTvc&s" alt="Card image cap">
             <h4>
-                Our Location 3  
+            Toyota GR Supra free 
             </h4>
-            <iframe
-            src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=north korea, pyongyang&amp;t=&amp;z=11&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-            class="w-100" height="250" allowfullscreen="" loading="lazy"></iframe>
+            <p class="card-text">  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id! </p>
             <div class="card-container">
-                <button>view</button>
+                <a class="button" href="https://www.oto.com/mobil-baru/toyota/supra/berita">view</a>
             </div>
         </div>
         <div class="card2">
+            <img class="card-img-top" src="https://storage.googleapis.com/prod-nissan-indonesia/static-assets/brand/18tdigb-helios307c.jpg.ximg.l_6_m.smart.jpg" alt="Card image cap">
             <h4>
-                Our Location 4
+                Nissan GTR
             </h4>
-            <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d115681.29592731265!2d-77.47713270775661!3d25.0326996781907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x892f7c99b981dbc9%3A0x2aef01d3485e50d2!2sNassau%2C%20Bahamy!5e0!3m2!1spl!2spl!4v1624445118063!5m2!1spl!2spl"
-            class="w-100" height="250" allowfullscreen="" loading="lazy"></iframe>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dicta ipsa ullam dolores delectus id!</p>
             <div class="card-container">
-                <button>view</button>
+                <a class="button" href="">view</a>
             </div>
         </div>
         </div>
     </div>
 </div>
-<!-- end location -->
 
- <!-- Footer -->
- <footer>
+<footer>
     <div class="footer">
        <div class="cover">
            <div class="quick-link">
@@ -148,7 +150,6 @@
            </div>
        </div>
    </div>
-</footer>
-   <!-- End Footer -->
+</footer>   
 </body>
 </html>
