--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="gallery.css  ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
@@ -20,11 +20,11 @@
         </div>
         <div class="nav-link">
             <ul>
-                <li><a href="index.html" class="action">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="dealership.html">Dealership</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-                <li><a href="location.html">Location</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="/about/about.html">About</a></li>
+              <li><a href="/dealership/dealership.html">Dealership</a></li>
+              <li><a href="gallery.html">gallery</a></li>
+              <li><a href="/location/location.html">Location</a></li>
             </ul>
         </div>
         <form class="d-flex" role="search">
