--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="nav-link">
             <ul>
                 <li><a href="index.html" class="action">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="dealership.html">Dealership</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-                <li><a href="location.html">Location</a></li>
+                <li><a href="/about/about.html">About</a></li>
+                <li><a href="/dealership/dealership.html">Dealership</a></li>
+                <li><a href="gallery/gallery.html">gallery</a></li>
+                <li><a href="/location/location.html">Location</a></li>
             </ul>
         </div>
         <form class="d-flex" role="search">
