--- a/dealership/dealership.html
+++ b/dealership/dealership.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="jquery-3.7.1.min.js"></script>
     <title>yum yummeres</title>
 </head>
 <body>
@@ -32,6 +33,17 @@
         <input class="form-control me-2 bi" type="search" placeholder="Search" aria-label="Search">
         <button type="button" class="btn btn-outline-primary">Submit</button>
       </form>
+      <div class="dropdown">
+        <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="fas fa-user-circle bigger-icon me-2"></i> <!-- Adjust the class here -->
+          User
+        </a>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownUser1">
+          <li><a class="dropdown-item" href="/login-register/login.html">Login</a></li>
+          <li><a class="dropdown-item" href="/login-register/register.html">Register</a></li>
+          <li><a class="dropdown-item" href="#">Settings</a></li>
+        </ul>
+      </div>
 </nav>
 <!-- End Navbar -->
 <!--  -->
@@ -90,7 +102,50 @@
         </div>
     </div>
 </div>
-
+<div class="form4">
+    <div class="dalem-form">
+        <h1>Please Fill Our form</h1>
+        <form>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="validationDefault01">First name</label>
+                    <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                        value="Mark" required>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="validationDefault02">Last name</label>
+                    <input type="text" class="form-control" id="validationDefault02" placeholder="Last name"
+                        value="Otto" required>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="validationDefaultUsername">Username</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                        </div>
+                        <input type="text" class="form-control" id="validationDefaultUsername"
+                            placeholder="Username" aria-describedby="inputGroupPrepend2" required>
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-6 mb-3">
+                    <label for="validationDefault03">City</label>
+                    <input type="text" class="form-control" id="validationDefault03" placeholder="City" required>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <label for="validationDefault04">State</label>
+                    <input type="text" class="form-control" id="validationDefault04" placeholder="State" required>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <label for="validationDefault05">Zip</label>
+                    <input type="text" class="form-control" id="validationDefault05" placeholder="Zip" required>
+                </div>
+            </div>
+            <button class="btn btn-primary" type="submit">Submit form</button>
+        </form>
+    </div>
+</div>
 <footer>
     <div class="footer">
        <div class="cover">
@@ -151,5 +206,6 @@
        </div>
    </div>
 </footer>   
+<script src="https://kit.fontawesome.com/eba53aeffa.js" crossorigin="anonymous"></script>
 </body>
 </html>
