--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </script>
     <title>yum yummeres</title>
     <link rel="icon" href="/img/arknigh.png">
+    <script src="jquery-3.7.1.min.js"></script>
 </head>
 
 <body>
@@ -31,16 +32,16 @@
         <div class="nav-link">
             <ul>
                 <li><a href="index.html" class="action">Home</a></li>
-                <li><a href="/about/about.html">About</a></li>
-                <li><a href="/dealership/dealership.html">Dealership</a></li>
+                <li><a href="about/about.html">About</a></li>
+                <li><a href="dealership/dealership.html">Dealership</a></li>
                 <li><a href="gallery/gallery.html">gallery</a></li>
-                <li><a href="/location/location.html">Location</a></li>
+                <li><a href="location/location.html">Location</a></li>
             </ul>
         </div>
         <form class="d-flex" role="search">
             <i class="bi bi-search"></i>
             <input class="form-control me-2 bi" type="search" placeholder="Search" aria-label="Search">
-            <button type="button" class="btn btn-outline-primary">Submit</button>
+            <button type="button" class="btn btn-outline-primary">Search</button>
         </form>
         <div class="dropdown">
             <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
@@ -49,8 +50,8 @@
                 User
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="/login-register/login.html">Login</a></li>
-                <li><a class="dropdown-item" href="/login-register/register.html">Register</a></li>
+                <li><a class="dropdown-item" href="login-register/login.html">Login</a></li>
+                <li><a class="dropdown-item" href="login-register/register.html">Register</a></li>
                 <li><a class="dropdown-item" href="#">Settings</a></li>
             </ul>
         </div>
@@ -66,11 +67,11 @@
         </div>
     </div>
     <!-- end Container -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#0099ff" fill-opacity="1" d="M0,224L0,64L1440,64L1440,320L0,320L0,320Z"></path>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" >
+        <path fill="#0099ff"  fill-opacity="2" d="M0,224L0,64L1440,64L1440,320L0,320L0,320Z"></path>
     </svg>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#0099ff" fill-opacity="1"
+        <path fill="#0099ff"  fill-opacity="1"
             d="M0,192L30,165.3C60,139,120,85,180,85.3C240,85,300,139,360,181.3C420,224,480,256,540,250.7C600,245,660,203,720,186.7C780,171,840,181,900,186.7C960,192,1020,192,1080,186.7C1140,181,1200,171,1260,181.3C1320,192,1380,224,1410,240L1440,256L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z">
         </path>
     </svg>
@@ -96,7 +97,7 @@
                     FERRARI PORTOFINO
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/4/47/HOR_XB1_Ferrari_Portofino.png/revision/latest/scale-to-width-down/699?cb=20200411132409"
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/4/47/HOR_XB1_Ferrari_Portofino.png"
                     alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -107,7 +108,7 @@
                     Mercedes-benz SL 65 AMG
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/2/28/HOR_XB1_M-B_SL_65.png/revision/latest/scale-to-width-down/699?cb=20190927193059"
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/2/28/HOR_XB1_M-B_SL_65.png"
                     alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -118,7 +119,7 @@
                     BMW i8
                 </h4>
                 <img class="img"
-                    src=" https://static.wikia.nocookie.net/forzamotorsport/images/7/7e/HOR_XB1_BMW_i8.png/revision/latest/scale-to-width-down/699?cb=20191021150511"
+                    src=" https://static.wikia.nocookie.net/forzamotorsport/images/7/7e/HOR_XB1_BMW_i8.png"
                     alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -129,7 +130,7 @@
                     NiSSAN GT-R R33
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/d/d8/HOR_XB1_Nissan_GT-R_95.png/revision/latest/scale-to-width-down/699?cb=20190916170410"
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/d/d8/HOR_XB1_Nissan_GT-R_95.png"
                     alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -140,7 +141,7 @@
                     BMW M3'08
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/0/0a/HOR_XB1_BMW_M3_08.png/revision/latest/scale-to-width-down/350?cb=20191111201605"
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/0/0a/HOR_XB1_BMW_M3_08.png/"
                     alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -151,7 +152,7 @@
                     Audi R8
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/f/f2/HOR_XB1_Audi_R8_13.png/revision/latest/scale-to-width-down/350?cb=20191021150511"
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/f/f2/HOR_XB1_Audi_R8_13.png"
                     alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -161,7 +162,7 @@
                 <h4>
                     Porsche 911'19
                 </h4>
-                <img class="img" src="https://static.wikia.nocookie.net/forzamotorsport/images/6/61/HOR_XB1_Porsche_911_19_Carrera.png/revision/latest/scale-to-width-down/350?cb=20200320135336
+                <img class="img" src="https://static.wikia.nocookie.net/forzamotorsport/images/6/61/HOR_XB1_Porsche_911_19_Carrera.png/
                 " alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -172,7 +173,7 @@
                     Aston-Martin Vantage
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/5/56/HOR_XB1_AM_Vantage_16.png/revision/latest/scale-to-width-down/350?cb=20191125205354"
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/5/56/HOR_XB1_AM_Vantage_16.png"
                     alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -186,15 +187,6 @@
     </h1>
     <!-- end container 3 -->
     <!-- Container 4-->
-    <h1 style="text-align: center;">the car</h1>
-    <div class="container4">
-    </div>
-    <br>
-    <br>
-
-    <!-- end container 4 -->
-
-    <!-- Form container 5 -->
     <div class="form4">
         <div class="dalem-form">
             <h1>Please Fill Our form</h1>
@@ -239,6 +231,17 @@
             </form>
         </div>
     </div>
+
+    <!-- end container 4 -->
+
+    <!-- Form container 5 -->
+    <h1 style="text-align: center;">the car</h1>
+    <div class="container4">
+    </div>
+    <br>
+    <br>
+
+
     <!-- end contrainer 5 -->
     <br>
     <!-- Footer -->
