--- a/about/about.html
+++ b/about/about.html
@@ -10,6 +10,7 @@
     <script src="jquery-3.7.1.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="icon" href="../img/arknigh.png">
     <title>yum yummeres</title>
 </head>
 <body>
@@ -25,15 +26,15 @@
             <ul>
                 <li><a href="../index.html" class="action">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="/dealership/dealership.html">Dealership</a></li>
-                <li><a href="/gallery/gallery.html">gallery</a></li>
-                <li><a href="/location/location.html">Location</a></li>
+                <li><a href="../dealership/dealership.html">Dealership</a></li>
+                <li><a href="../gallery/gallery.html">gallery</a></li>
+                <li><a href="../location/location.html">Location</a></li>
             </ul>
         </div>
         <form class="d-flex" role="search">
             <i class="bi bi-search"></i>
             <input class="form-control bi" style="margin-right: 10px;" type="search" placeholder="Search" aria-label="Search">
-            <button type="button" class="btn btn-outline-primary">Submit</button>
+            <button type="button" class="btn btn-outline-primary">Search</button>
           </form>
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -41,21 +42,53 @@
               User
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownUser1">
-              <li><a class="dropdown-item" href="/login-register/login.html">Login</a></li>
-              <li><a class="dropdown-item" href="/login-register/register.html">Register</a></li>
+              <li><a class="dropdown-item" href="login-register/login.html">Login</a></li>
+              <li><a class="dropdown-item" href="login-register/register.html">Register</a></li>
               <li><a class="dropdown-item" href="#">Settings</a></li>
             </ul>
           </div>
     </nav>
     <!-- End Navbar -->
-         <div class="container2cov">
-            <div class="kanan " data-aos="zoom-in-up"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
-            </div>
+    <div class="slide">
+    <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-    
-
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img/bmwdealership.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../img/bmwdealership.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../img/bmwdealership.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
 <!-- about -->
         <div class="main2">
             <div class="tentang">
