--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="jquery-3.7.1.min.js"></script>
+    <link rel="icon" href="../img/arknigh.png">
     <title>yum yummeres</title>
 </head>
 <body>
@@ -22,16 +23,16 @@
         <div class="nav-link">
             <ul>
               <li><a href="../index.html">Home</a></li>
-              <li><a href="/about/about.html">About</a></li>
-              <li><a href="/dealership/dealership.html">Dealership</a></li>
+              <li><a href="../about/about.html">About</a></li>
+              <li><a href="../dealership/dealership.html">Dealership</a></li>
               <li><a href="gallery.html">gallery</a></li>
-              <li><a href="/location/location.html">Location</a></li>
+              <li><a href="../location/location.html">Location</a></li>
             </ul>
         </div>
         <form class="d-flex" role="search">
             <i class="bi bi-search"></i>
             <input class="form-control me-2 bi" type="search" placeholder="Search" aria-label="Search">
-            <button type="button" class="btn btn-outline-primary">Submit</button>
+            <button type="button" class="btn btn-outline-primary">Search</button>
           </form>
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -39,8 +40,8 @@
               User
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownUser1">
-              <li><a class="dropdown-item" href="/login-register/login.html">Login</a></li>
-              <li><a class="dropdown-item" href="/login-register/register.html">Register</a></li>
+              <li><a class="dropdown-item" href="login-register/login.html">Login</a></li>
+              <li><a class="dropdown-item" href="login-register/register.html">Register</a></li>
               <li><a class="dropdown-item" href="#">Settings</a></li>
             </ul>
           </div>
