--- a/login-register/forgot.html
+++ b/login-register/forgot.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="util.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
     <script src="jquery-3.7.1.min.js"></script>
+	<link rel="icon" href="../img/arknigh.png">
 </head>
 <body>
 	
