--- a/login-register/login.html
+++ b/login-register/login.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="util.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="jquery-3.7.1.min.js"></script>
+	<link rel="icon" href="../img/arknigh.png">
 </head>
 <body>
 	
@@ -46,7 +47,7 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<a class="login100-form-btn"  href="/index.html">
+						<a class="login100-form-btn"  href="../index.html">
 							Login
 						</a>
 					</div>
