fix jquery + make css a little bit smaller

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </script>
     <title>yum yummeres</title>
     <link rel="icon" href="/img/arknigh.png">
-    <script src="jquery-3.7.1.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="jquery.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
     <style>
         #container {
             width: 1200px;
