--- a/login-register/login.html
+++ b/login-register/login.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
 	<link rel="stylesheet" type="text/css" href="util.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<script src="jquery-3.7.1.min.js"></script>
+	<script src="jquery.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<link rel="icon" href="../img/arknigh.png">
 	<script>
