--- a/login-register/register.html
+++ b/login-register/register.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="util.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="icon" href="../img/arknigh.png">
+	<script src="jquery.js"></script>
 </head>
 <body>
 	
