--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
     </script>
     <title>yum yummeres</title>
-    <link rel="icon" href="/img/arknigh.png">
+    <link rel="icon" href="img/arknigh.png">
     <script src="jquery.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
     <style>
@@ -161,7 +161,7 @@
                     src="https://static.wikia.nocookie.net/forzamotorsport/images/4/47/HOR_XB1_Ferrari_Portofino.png"
                     alt="">
                 <div class="card-container">
-                    <button>view</button>
+                    <a  type="button" class="button" href="order/order.html">view</a>
                 </div>
             </div>
             <div class="card2">
@@ -171,7 +171,7 @@
                 <img class="img"
                     src="https://static.wikia.nocookie.net/forzamotorsport/images/2/28/HOR_XB1_M-B_SL_65.png" alt="">
                 <div class="card-container">
-                    <button>view</button>
+                    <a  type="button" class="button" href="order/order.html">view</a>
                 </div>
             </div>
             <div class="card2">
@@ -181,7 +181,7 @@
                 <img class="img" src=" https://static.wikia.nocookie.net/forzamotorsport/images/7/7e/HOR_XB1_BMW_i8.png"
                     alt="">
                 <div class="card-container">
-                    <button>view</button>
+                    <a  type="button" class="button" href="order/order.html">view</a>
                 </div>
             </div>
             <div class="card2">
@@ -192,7 +192,7 @@
                     src="https://static.wikia.nocookie.net/forzamotorsport/images/d/d8/HOR_XB1_Nissan_GT-R_95.png"
                     alt="">
                 <div class="card-container">
-                    <button>view</button>
+                    <a  type="button" class="button" href="order/order.html">view</a>
                 </div>
             </div>
             <div class="card2">
@@ -202,7 +202,7 @@
                 <img class="img"
                     src="https://static.wikia.nocookie.net/forzamotorsport/images/0/0a/HOR_XB1_BMW_M3_08.png/" alt="">
                 <div class="card-container">
-                    <button>view</button>
+                    <a  type="button" class="button" href="order/order.html">view</a>
                 </div>
             </div>
             <div class="card2">
@@ -212,7 +212,7 @@
                 <img class="img"
                     src="https://static.wikia.nocookie.net/forzamotorsport/images/f/f2/HOR_XB1_Audi_R8_13.png" alt="">
                 <div class="card-container">
-                    <button>view</button>
+                    <a  type="button" class="button" href="order/order.html">view</a>
                 </div>
             </div>
             <div class="card2">
@@ -222,7 +222,7 @@
                 <img class="img" src="https://static.wikia.nocookie.net/forzamotorsport/images/6/61/HOR_XB1_Porsche_911_19_Carrera.png/
                 " alt="">
                 <div class="card-container">
-                    <button>view</button>
+                    <a  type="button" class="button" href="order/order.html">view</a>
                 </div>
             </div>
             <div class="card2">
@@ -233,7 +233,7 @@
                     src="https://static.wikia.nocookie.net/forzamotorsport/images/5/56/HOR_XB1_AM_Vantage_16.png"
                     alt="">
                 <div class="card-container">
-                    <button>view</button>
+                    <a type="button" class="button" href="order/order.html">view</a>
                 </div>
             </div>
         </div>
