--- a/login-register/login.html
+++ b/login-register/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
@@ -17,35 +18,61 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<link rel="icon" href="../img/arknigh.png">
 	<script>
-		$(document).ready(function(){
-		  $("#loginButton").click(function(){
-			var username = $("#username").val();
-			var password = $("#password").val();
-			
-			// Perform basic client-side validation
-			if(username === '' || password === '') {
-			  alert("Please enter both username and password");
-			  return;
-			}
-	
-			// Simulated login process (replace this with your actual login logic)
-			if(username === 'anggara' && password === '123') {
-			  // Redirect to the index/main page upon successful login
-			  window.location.href = "../index.html"; // Redirect to the index/main page
-			} else {
-			  alert("Invalid username or password. Please try again.");
-			}
-		  });
+		$(document).ready(function () {
+			$("#loginButton").click(function () {
+				var username = $("#username").val();
+				var password = $("#password").val();
+
+				// validation
+				if (username === '' || password === '') {
+					alert("Please enter both username and password");
+					return;
+				}
+
+				// Simulated login process (replace this with your actual login logic)
+				if (username === 'anggara' && password === '123') {
+					// Redirect to the index/main page upon successful login
+					window.location.href = "../index.html"; // Redirect to the index/main page
+				} else {
+					alert("Invalid username or password. Please try again.");
+				}
+			});
+			// Click Event
+			$(".button").click(function () {
+				alert("Welcome!");
+			});
+
+			// Change Event
+			$("input").change(function () {
+				alert("The input value was changed.");
+			});
+
+			// Mouse Move Event
+			$(document).mousemove(function () {
+				console.log("Mouse pointer moved.");
+			});
+
+			// Keypress Event
+			$(document).keypress(function () {
+				console.log("Key was pressed.");
+			});
+
+			// Focus Event
+			$("input").focus(function () {
+				console.log("Input field is focused.");
+			});
 		});
-	  </script>
+	</script>
 </head>
+
 <body>
-	
+
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
-					<img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8zMl9pbGx1c3RyYXRpb25fb2ZfZXVyb3BlYW5fc2hvcnRoYWlyX19pc29sYXRlZF83OWU0MjY3Yy1hYTZkLTQ1MTEtOTlhMy0yMzQ0YWYwNWQ5YTAucG5n.png" alt="IMG">
+					<img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8zMl9pbGx1c3RyYXRpb25fb2ZfZXVyb3BlYW5fc2hvcnRoYWlyX19pc29sYXRlZF83OWU0MjY3Yy1hYTZkLTQ1MTEtOTlhMy0yMzQ0YWYwNWQ5YTAucG5n.png"
+						alt="IMG">
 				</div>
 
 				<form class="login100-form validate-form">
@@ -53,7 +80,7 @@
 						Login
 					</span>
 
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+					<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
 						<input class="input100" type="text" name="email" placeholder="Email" id="username">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
@@ -61,14 +88,14 @@
 						</span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<input class="input100" type="password" name="pass" placeholder="Password" id="password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
-					
+
 					<div class="container-login100-form-btn">
 						<a class="login100-form-btn" id="loginButton">
 							Login
@@ -94,25 +121,26 @@
 			</div>
 		</div>
 	</div>
-	
-	
 
-	
+
+
+
 
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
+
 	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
+
 	<script src="vendor/tilt/tilt.jquery.min.js"></script>
-	<script >
+	<script>
 		$('.js-tilt').tilt({
 			scale: 1.1
 		})
 	</script>
-<!--===============================================================================================-->
+
 	<script src="js/main.js"></script>
 
 </body>
+
 </html>
